objects/Fund_Reference__c.object
<CustomObject>
    <fields>
        <fullName>FONDREFImpId__c</fullName>
        <externalId>true</externalId>
        <label>FONDREFImpId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <label>Fonds</label>
        <referenceTo>Fund__c</referenceTo>
        <relationshipLabel>Fondsreferenzen</relationshipLabel>
        <relationshipName>Fund_References</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <formula>Fund__r.Label__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Fondsreferenz_ID__c</fullName>
        <label>Old Fondsreferenz ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Anfrage</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Fonds</relationshipLabel>
        <relationshipName>Fund_References</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Weighting__c</fullName>
        <label>Gewichtung</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Fondsreferenz</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fondsreferenzen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>